work: Zvanje view